--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@popperjs/core": "^2.10.1",
+    "bootstrap": "^5.0.0-beta3",
+    "pdfmake": "^0.2.2",
+    "pdfmake-wrapper": "^2.1.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
